; ModuleID = '/home/carl/AnghaBench/vlc/modules/stream_out/transcode/encoder/extr_encoder.c_transcode_encoder_drain.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/stream_out/transcode/encoder/extr_encoder.c_transcode_encoder_drain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 }

@VLC_EGENERIC = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @transcode_encoder_drain(%struct.TYPE_10__* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_10__*, align 8
  %5 = alloca i32**, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %4, align 8
  store i32** %1, i32*** %5, align 8
  %6 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %7 = call i32 @transcode_encoder_opened(%struct.TYPE_10__* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %10, i32* %3, align 4
  br label %30

11:                                               ; preds = %2
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  switch i32 %17, label %28 [
    i32 128, label %18
    i32 130, label %22
    i32 129, label %26
  ]

18:                                               ; preds = %11
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %20 = load i32**, i32*** %5, align 8
  %21 = call i32 @transcode_encoder_video_drain(%struct.TYPE_10__* %19, i32** %20)
  store i32 %21, i32* %3, align 4
  br label %30

22:                                               ; preds = %11
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %4, align 8
  %24 = load i32**, i32*** %5, align 8
  %25 = call i32 @transcode_encoder_audio_drain(%struct.TYPE_10__* %23, i32** %24)
  store i32 %25, i32* %3, align 4
  br label %30

26:                                               ; preds = %11
  %27 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %27, i32* %3, align 4
  br label %30

28:                                               ; preds = %11
  %29 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %28, %26, %22, %18, %9
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @transcode_encoder_opened(%struct.TYPE_10__*) #1

declare dso_local i32 @transcode_encoder_video_drain(%struct.TYPE_10__*, i32**) #1

declare dso_local i32 @transcode_encoder_audio_drain(%struct.TYPE_10__*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
